--- a/style.css
+++ b/style.css
@@ -2,3 +2,19 @@
     display: flex;
     flex-direction: row;
 }
+.containerCart{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.containerSummary{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.summary{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
