--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    border-bottom: black solid 1px;
 }
 .containerSummary{
     display: flex;
@@ -17,4 +18,12 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    text-align: right;
+    margin-left: 10px;
+}
+
+#discountApply{
+    color: red;
+    text-decoration: line-through;
+    font-size: smaller;
 }
