--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@
     justify-content: center;
 }
 
-#validationButtonContainer{
+.validationButtonContainer{
     display: flex;
     justify-content: center;
 }
