--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     background: darkseagreen;
     margin: 5px;
     padding: 3px;
+    max-width: 30em;
 }
 .containerCart{
     display: flex;
@@ -12,6 +13,11 @@
     justify-content: space-between;
     border-bottom: black solid 1px;
 }
+
+#containerCartName{
+    width: 20em;
+}
+
 .containerSummary{
     display: flex;
     flex-direction: row;
